# borders

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  NOTICE  README.md  RELEASE_NOTES.md  __init__.py  borders.py  pyproject.toml  requirements.txt  setup.py  test_borders.py
.github/workflows/: release.yml
borders/: __init__.py  borders.py
