[project]
name = "borders"
version = "1.1.2.post1"
dependencies = ["textlinebreaker >= 0.1.0 ","colorama"]
requires-python = ">=3.9"
authors = [
    { name="scalvaruso", email="calvaruso.simone@gmail.com" },
]
description = "A module to create a frame when printing a list of strings, with control on the alignment of the text and frame. In addition can be configured to act as 'input()'."
readme = "README.md"
license = {text = "MIT License"}
keywords = ["alignment", "break", "center", "centre", "color", "format", "frame", "highlight", "input", "left", "line", "output", "right", "split", "text"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://pypi.org/project/borders/"
Repository = "https://github.com/scalvaruso/borders"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"