[build-system]
# Minimum versions ensure modern packaging features work
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "borders"

# Version is now dynamic, setuptools_scm will infer it from Git tags
dynamic = ["version"]

description = "A module to create a frame when printing a list of strings, with control on the alignment of the text and frame. In addition can be configured to act as 'input()'."

readme = "README.md"
license = { text = "MIT License" }

authors = [
    { name = "scalvaruso", email = "calvaruso.simone@gmail.com" }
]

requires-python = ">=3.9"

# Base dependencies
dependencies = [
    "polychromy>=1.1.1",
    "textlinebreaker>=1.0.0"
]

# Optional dependencies (install only on Windows)
[project.optional-dependencies]
windows = ["colorama>=0.4.6"]

keywords = [
    "alignment", "break", "center", "centre", "color",
    "format", "frame", "highlight", "input", "left",
    "line", "output", "right", "split", "text"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://pypi.org/project/borders/"
Repository = "https://github.com/scalvaruso/borders"
Issues = "https://github.com/scalvaruso/borders/issues"

[tool.setuptools_scm]
# How version numbers are generated
version_scheme = "post-release"
local_scheme = "no-local-version"
